samples/_failures_safe/1761716450_2426d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae01b1d5.c: In function ‘main’:
./samples/SAFE/__tmp_ae01b1d5.c:162:16: error: missing terminating " character
  162 |         printf("Empty input
      |                ^~~~~~~~~~~~
./samples/SAFE/__tmp_ae01b1d5.c:162:9: error: expected expression at end of input
  162 |         printf("Empty input
      |         ^~~~~~
./samples/SAFE/__tmp_ae01b1d5.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ae01b1d5.c:162:9: error: expected declaration or statement at end of input
